--- a/.github/workflows/minimal_ci.yml
+++ b/.github/workflows/minimal_ci.yml
@@ -35,7 +35,7 @@ jobs:
 
       #SDK setup
       - name: Set up Android SDK
-      - uses: android-actions/setup-android@v4
+        uses: android-actions/setup-android@v4
       - with:
           api-lever: 34
           build-tools: 34.0.0
