--- a/.github/workflows/minimal_ci.yml
+++ b/.github/workflows/minimal_ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Set up jdk 17
-        uses: actions/checkout@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'tenurin'
           java-version: '17'
@@ -36,15 +36,15 @@ jobs:
       #SDK setup
       - name: Set up Android SDK
         uses: android-actions/setup-android@v4
-      - with:
-          api-lever: 34
+        with:
+          api-level: 34
           build-tools: 34.0.0
           target: google_apis/x86_64
           emulator-options: '-no-window -gpu swiftshader_indirect'
 
       # Graddle executable
       - name: Make Gradle executable
-        run: xhmod +x gradlew
+        run: chmod +x gradlew
 
       # dependencies
       - name: Chech dependencies
@@ -57,7 +57,7 @@ jobs:
       # start emulator
       - name: Start Emulator
         run: |
-          echo "no" | $AMDROID_HOME/emulator -avd test -no-window -gpu swiftshader_indirect &
+          echo "no" | $ANDROID_HOME/emulator/emulator -avd test -no-window -gpu swiftshader_indirect &
           adb wait-for-device
           adb shell input keyevent 82 &
 
@@ -67,7 +67,7 @@ jobs:
 
       # If previous jobs fail
       - name: CI/Cd failed
-        if: failures()
+        if: failure()
         run: |
           echo "TODO: Send message that something has failed..."
       # Runs a set of commands using the runners shell
