--- a/.github/workflows/minimal_ci.yml
+++ b/.github/workflows/minimal_ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Set up jdk 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'tenurin'
+          distribution: 'temurin'
           java-version: '17'
 
       #SDK setup
