--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-agp = "8.13.0"
+accompanistPager = "0.36.0"
+agp = "8.13.1"
 converterGson = "3.0.0"
 coreSplashscreen = "1.0.1"
 firebaseBom = "34.4.0"
@@ -23,6 +24,7 @@ firebaseAi = "17.4.0"
 foundation = "1.9.4"
 
 [libraries]
+accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
